packages/beynac/src/test-utils/source/__fixtures__/errors/bad-index-file/source.ts
import { BaseClass } from "../../../../../utils.ts";

export class Something extends BaseClass {}
